tests/baselines/reference/comparisonOperatorWithUndefinedType(strict=false).errors.txt
comparisonOperatorWithUndefinedType.ts(3,1): error TS2367: This comparison appears to be unintentional because the types 'string' and 'number' have no overlap.


==== comparisonOperatorWithUndefinedType.ts (1 errors) ====
    declare let foo: string | undefined;
    declare let bar: number | undefined;
    foo === bar;
    ~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'string' and 'number' have no overlap.